################################################################################
# Meson file
################################################################################

################################################################################
# Install

install_data(['org.siril.Siril.appdata.xml'
              ,'siril.xml'
              ,'org.siril.Siril.desktop'],
             rename : ['metainfo/org.siril.Siril.appdata.xml'
                      ,'mime/packages/siril.xml'
                      ,'applications/org.siril.Siril.desktop'],
             install_dir : siril_share)
