include sirilpy-list.mk
sirilpydir = $(datadir)/python_module/sirilpy
sirilpy_DATA = $(sirilpy)

tkfilebrowserdir = $(datadir)/python_module/sirilpy/tkfilebrowser
tkfilebrowser_DATA = $(tkfiles)

tkfilebrowserimagesdir = $(datadir)/python_module/sirilpy/tkfilebrowser/images
tkfilebrowserimages_DATA = $(tkfilebrowserimages)
