include sirilpy-list.mk
sirilpydir = $(pkgdatadir)/python_module/sirilpy
sirilpy_DATA = $(sirilpy)

tkfilebrowserdir = $(pkgdatadir)/python_module/sirilpy/tkfilebrowser
tkfilebrowser_DATA = $(tkfiles)

tkfilebrowserimagesdir = $(pkgdatadir)/python_module/sirilpy/tkfilebrowser/images
tkfilebrowserimages_DATA = $(tkfilebrowserimages)
